crates/mecojoni-core/tests/fixtures/invalid/bad-indentation.meco
---
meco: 1
module: npc
types:
 Mood: [calm, tense]
---

# greeting
- Hello.
